Ajuste css dashboard

--- a/weedWeb/src/app/dashboard/dashboard.component.html
+++ b/weedWeb/src/app/dashboard/dashboard.component.html
@@ -2,128 +2,108 @@
 
 <div class="header bg-gradient-danger pb-8 pt-5 pt-md-8">
   <div class="container-fluid">
+    <h1 class="titulo">Estadística de tus granjas</h1>
+    <br/>
     <div class="header-body">
       <!-- Card stats -->
-      <div class="row">
+      <div class="row center">
+        <!-- Escoger tu graja -->
         <div class="col-xl-3 col-lg-6">
           <div class="card card-stats mb-4 mb-xl-0">
             <div class="card-body">
-              <div class="row">
-                <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">
+              <div class="row ">
+                <div class="text-center">
+                  <h5 class="card-title text-uppercase mb-0 bold-text">
                     Escoja la granja
                   </h5>
                 </div>
                 <div class="col-auto">
+                  <br/>
                   <div>
-                    <label for="seedName">GRANJA:&nbsp;</label>
-                    <select id="seedName" name="seedName" [(ngModel)]="farmName" (ngModelChange)="onSeedNameChange()"  required>
-                      <option value="">Seleccione una opción</option>
-                      <option *ngFor="let option of farmsOptions" [value]="option.farm_name">{{ option.farm_name }}</option>
+                    <label for="seedName" class="bold-text">GRANJA:&nbsp;</label>
+                    <select id="seedName" name="seedName" [(ngModel)]="farmName" (ngModelChange)="onSeedNameChange()"
+                      required>
+                      <option value="">Seleccione una granja</option>
+                      <option *ngFor="let option of farmsOptions" [value]="option.farm_name">{{ option.farm_name }}
+                      </option>
                     </select>
                   </div>
-                  <div
-                    class="icon icon-shape bg-danger text-white rounded-circle shadow"
-                  >
+                  <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
                     <i class="fas fa-chart-bar"></i>
-
-
                   </div>
                 </div>
               </div>
-
             </div>
           </div>
         </div>
-        <div class="col-xl-3 col-lg-6">
+        <!-- Muestra longitud -->
+        <div class="col-xl-3 col-lg-6 ">
           <div class="card card-stats mb-4 mb-xl-0">
             <div class="card-body">
               <div class="row">
                 <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">
+                  <h5 class="card-title text-uppercase mb-0">
                     Ubicación longitud:
                   </h5>
-                  <span class="h2 font-weight-bold mb-0">{{long}}
-
-                    </span>
+                  <span class="h2 font-weight-bold mb-0" style="color: #68902B;">{{long}}</span>
                 </div>
                 <div class="col-auto">
-                  <div
-                    class="icon icon-shape bg-warning text-white rounded-circle shadow"
-                  >
+                  <div class="icon icon-shape bg-warning text-white rounded-circle shadow">
                     <i class="fas fa-chart-pie"></i>
                   </div>
                 </div>
               </div>
-              <p class="mt-3 mb-0 text-muted text-sm">
-                <span class="text-danger mr-2"
-                  ><i class="fas fa-arrow-down"></i> </span
-                >
-              </p>
             </div>
           </div>
         </div>
+        <!-- Muestra latitud -->
         <div class="col-xl-3 col-lg-6">
           <div class="card card-stats mb-4 mb-xl-0">
             <div class="card-body">
               <div class="row">
                 <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">
-                    Ubicación latitud: :
+                  <h5 class="card-title text-uppercase mb-0">
+                    Ubicación latitud:
                   </h5>
-                  <span class="h2 font-weight-bold mb-0">{{latitude}}</span>
+                  <span class="h2 font-weight-bold mb-0" style="color: #68902B;">{{latitude}}</span>
                 </div>
                 <div class="col-auto">
-                  <div
-                    class="icon icon-shape bg-yellow text-white rounded-circle shadow"
-                  >
+                  <div class="icon icon-shape bg-yellow text-white rounded-circle shadow">
                     <i class="fas fa-users"></i>
                   </div>
                 </div>
               </div>
-              <p class="mt-3 mb-0 text-muted text-sm">
-                <span class="text-warning mr-2"
-                  ><i class="fas fa-arrow-down"></i> </span
-                >
-              </p>
             </div>
           </div>
         </div>
-
       </div>
     </div>
   </div>
 </div>
 <div class="container-fluid mt--7">
-  <div class="row">
+  <!-- Temperatura -->
+  <div class="row mt-5 justify-content-center text-center">
     <div class="col-xl-8 mb-5 mb-xl-0">
       <div class="card bg-gradient-default shadow">
         <div class="card-header bg-transparent">
           <div class="row align-items-center">
-            <div class="col">
+            <div class="text-center">
               <h6 class="text-black text-light ls-1 mb-1">Datos</h6>
               <h2 class="text-black mb-0">Temperatura °C </h2>
-              <select id="seedName" name="days" [(ngModel)]="daysSelecte" (ngModelChange)="onSeedNameChangeDay(daysSelecte)"  required>
-                <option value="1">1 Día  </option>
+              <br/>
+              <select id="seedName" name="days" [(ngModel)]="daysSelecte"
+                (ngModelChange)="onSeedNameChangeDay(daysSelecte)" required>
+                <option value="1">1 Día </option>
                 <option value="3">3 Días </option>
-
-                <option value="7">7 Días  </option>
-                <option value="14">14 Días  </option>
-                <option value="16">1 Días  </option>
+                <option value="7">7 Días </option>
+                <option value="14">14 Días </option>
+                <option value="16">16 Días </option>
               </select>
             </div>
             <div class="col">
               <ul class="nav nav-pills justify-content-end">
-                <li
-                  class="nav-item mr-2 mr-md-0"
-                  data-toggle="chart"
-                  data-target="#chart-sales"
-                ></li>
-                <li
-                  class="nav-item"
-                  data-toggle="chart"
-                  data-target="#chart-sales"
-                ></li>
+                <li class="nav-item mr-2 mr-md-0" data-toggle="chart" data-target="#chart-sales"></li>
+                <li class="nav-item" data-toggle="chart" data-target="#chart-sales"></li>
               </ul>
             </div>
           </div>
@@ -139,26 +119,19 @@
         </div>
       </div>
     </div>
-    <div class="row mt-5">
+    <!-- Precipitación -->
+    <div class="row mt-5 justify-content-center text-center">
       <div class="col-xl-8 mb-5 mb-xl-0">
         <div class="card shadow">
           <div class="card-header border-0">
             <div class="row align-items-center">
-              <div class="col">
-                <h3 class="mb-0">Precipitacion %</h3>
+              <div class="text-center">
+                <h3 class="mb-0">Precipitación %</h3>
               </div>
               <div class="col">
                 <ul class="nav nav-pills justify-content-end">
-                  <li
-                    class="nav-item mr-2 mr-md-0"
-                    data-toggle="chart"
-                    data-target="#chart-sales"
-                  ></li>
-                  <li
-                    class="nav-item"
-                    data-toggle="chart"
-                    data-target="#chart-sales"
-                  ></li>
+                  <li class="nav-item mr-2 mr-md-0" data-toggle="chart" data-target="#chart-sales"></li>
+                  <li class="nav-item" data-toggle="chart" data-target="#chart-sales"></li>
                 </ul>
               </div>
             </div>
@@ -172,47 +145,35 @@
               </div>
             </div>
           </div>
-
-
         </div>
       </div>
-  <div class="row mt-5">
-    <div class="col-xl-8 mb-5 mb-xl-0">
-      <div class="card shadow">
-        <div class="card-header border-0">
-          <div class="row align-items-center">
-            <div class="col">
-              <h3 class="mb-0">Humedad %</h3>
+      <!-- Humedad -->
+      <div class="row mt-5 justify-content-center text-center">
+        <div class="col-xl-8 mb-5 mb-xl-0">
+          <div class="card shadow">
+            <div class="card-header border-0">
+              <div class="row align-items-center">
+                <div class="text-center">
+                  <h3 class="mb-0">Humedad %</h3>
+                </div>
+                <div class="col">
+                  <ul class="nav nav-pills justify-content-end">
+                    <li class="nav-item mr-2 mr-md-0" data-toggle="chart" data-target="#chart-sales"></li>
+                    <li class="nav-item" data-toggle="chart" data-target="#chart-sales"></li>
+                  </ul>
+                </div>
+              </div>
             </div>
-            <div class="col">
-              <ul class="nav nav-pills justify-content-end">
-                <li
-                  class="nav-item mr-2 mr-md-0"
-                  data-toggle="chart"
-                  data-target="#chart-sales"
-                ></li>
-                <li
-                  class="nav-item"
-                  data-toggle="chart"
-                  data-target="#chart-sales"
-                ></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="card-body">
-          <!-- Chart -->
-          <div class="chart">
-            <!-- Chart wrapper -->
-            <div class="chart-container">
-              <canvas id="humedad">{{ chart }}</canvas>
+            <div class="card-body">
+              <!-- Chart -->
+              <div class="chart">
+                <!-- Chart wrapper -->
+                <div class="chart-container">
+                  <canvas id="humedad">{{ chart }}</canvas>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-
-
       </div>
     </div>
-
-  </div>
-</div>
