--- a/weedWeb/src/app/components/menubaruser/menubaruser.component.html
+++ b/weedWeb/src/app/components/menubaruser/menubaruser.component.html
@@ -25,20 +25,11 @@
       <li class="nav-item">
         <a class="nav-link" href="/Dashboard">Estadisticas</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/Time">Pronostíco de tiempo</a>
-      </li>
-
     </ul>
-    <form class="d-flex mt-3" role="search">
-      <input
-        class="form-control me-2"
-        type="search"
-        placeholder="Search"
-        aria-label="Search"
-      />
-      <button class="btn btn-success" type="submit">Buscar</button>
-    </form>
+      <img src="../../../assets/image/toallin.png" style="margin-top: 50%;margin-left: 25%;">
+
+
+
   </div>
 </div>
 
