--- a/weedWeb/src/app/login/login.component.css
+++ b/weedWeb/src/app/login/login.component.css
@@ -167,3 +167,15 @@ a:hover {
   text-align: center;
   display: flex;
 }
+
+.center {
+  margin-left: auto;
+  margin-right: auto;
+  /* display: grid; */
+  /* place-items: center;
+  justify-content: space-around; */
+}
+
+.boton1 {
+  align-items: center;
+}
