adelanto de interfaces de microfront - ecommerce y freemium

--- a/weedWeb/src/app/components/menubaruser/menubaruser.component.html
+++ b/weedWeb/src/app/components/menubaruser/menubaruser.component.html
@@ -25,6 +25,9 @@
       <li class="nav-item">
         <a class="nav-link" href="/Dashboard">Estadisticas</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/Catalogo">E-Commerce</a>
+      </li>
     </ul>
       <img src="../../../assets/image/toallin.png" style="margin-top: 50%;margin-left: 25%;">
 
@@ -63,6 +66,9 @@
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <h1 class="nav-link" >Hola, {{userName}} </h1>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/Freemium">Mi plan</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/Login">Cerrar sesión</a>
