--- a/weedWeb/src/app/freemium/freemium.component.html
+++ b/weedWeb/src/app/freemium/freemium.component.html
@@ -1,59 +1,61 @@
 <menu-bar-user></menu-bar-user>
-
-<div class="header bg-gradient-danger pb-8 pt-5 pt-md-8 mt-5">
-    <div class="container-fluid text-center">
-        <h1 class="titulo mb-4">Suscríbete y potencia tu granja</h1>
-        <br/>
-        <div class="row justify-content-center">
-            <div class="col-md-6 col-lg-4 mb-4">
-                <p-card header="Plan normal" subheader="Gratis" [style]="{ 'background-color': 'rgba(65, 97, 70, 0.45)', height: '300px' }" class="d-flex flex-column h-100">
-                    <ul class="list-unstyled mt-3">
-                        <li><i class="fas fa-check text-success"></i> Puede crear una granja completamente gratis</li>
-                        <li><i class="fas fa-check text-success"></i> Puede manejar hasta 6 parcelas</li>
-                        <br/>
-                    </ul>
-                    <div class="mt-auto mt-3">
-                        <button class="btn btn-success" disabled>Ya lo tengo</button>
-                    </div>
-                </p-card>
+<div class="contenido">
+    <div class="header bg-gradient-danger pb-8 pt-5 pt-md-8 mt-5">
+        <div class="container-fluid text-center">
+            <h1 class="titulo mb-4">Suscríbete y potencia tu granja</h1>
+            <br/>
+            <div class="row justify-content-center">
+                <div class="col-md-6 col-lg-4 mb-4">
+                    <p-card header="Plan normal" subheader="Gratis" [style]="{ 'background-color': 'rgba(255, 255, 255)', height: '300px' }" class="d-flex flex-column h-100">
+                        <ul class="list-unstyled mt-3">
+                            <li><i class="fas fa-check text-success"></i> </li>
+                            <li><i class="fas fa-check text-success"></i> </li>
+                            <li><i class="fas fa-times text-muted"></i> Descuentos en la e-commerce</li>
+                            <br/>
+                        </ul>
+                        <div class="mt-auto mt-3">
+                            <button class="btn btn-success" disabled>Ya lo tengo</button>
+                        </div>
+                    </p-card>
+                </div>
+                <div class="col-md-6 col-lg-4 mb-4">
+                    <p-card header="Plan premium" subheader="Mensual" [style]="{ 'background-color': 'rgba(255, 255, 255)', height: '300px'  }" class="d-flex flex-column h-100">
+                        <ul class="list-unstyled mt-3">
+                            <li><i class="fas fa-check text-success"></i> Puede crear  granjas</li>
+                            <li><i class="fas fa-check text-success"></i> Puede manejar parcelas ilimitadas</li>
+                            <li><i class="fas fa-check text-success"></i> Descuentos en la e-commerce</li>
+                        </ul>
+                        <div class="mt-auto mt-3">
+                            <button class="btn btn-primary" data-toggle="modal" data-target="#modalProcesoPago">Suscribirse</button>
+                        </div>
+                    </p-card>
+                </div>
             </div>
-            <div class="col-md-6 col-lg-4 mb-4">
-                <p-card header="Plan premium" subheader="Mensual - Anual" [style]="{ 'background-color': 'rgba(65, 97, 70, 0.45)', height: '300px'  }" class="d-flex flex-column h-100">
-                    <ul class="list-unstyled mt-3">
-                        <li><i class="fas fa-check text-success"></i> Puede crear  granjas ilimitadas</li>
-                        <li><i class="fas fa-check text-success"></i> Puede manejar parcelas ilimitadas</li>
-                        <li><i class="fas fa-check text-success"></i> Descuentos en la e-commerce</li>
-                    </ul>
-                    <div class="mt-auto mt-3">
-                        <button class="btn btn-primary" data-toggle="modal" data-target="#modalProcesoPago">Suscribirse</button>
-                    </div>
-                </p-card>
+    
+            <div class="mt-4 d-flex justify-content-center align-items-center">
+                <h5 class="mr-1 font-weight-bold">Usa medio de pago: Cannabit</h5>
+                <img src="../../assets/image/cannabit.png" alt="Cannabit" height="25">
             </div>
-        </div>
-
-        <div class="mt-4 d-flex justify-content-center align-items-center">
-            <h5 class="mr-2 font-weight-bold">Usa medio de pago: Cannabit</h5>
-            <img src="../../assets/image/cannabit.png" alt="Cannabit" height="30">
         </div>
     </div>
-</div>
-
-<!-- Modal de Procesamiento de Pago -->
-<div class="modal fade" id="modalProcesoPago" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Procesando Pago</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <p>Por favor espere mientras procesamos su pago...</p>
-                <!-- Agrega aquí cualquier información adicional sobre el proceso de pago -->
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+    
+    <!-- Modal de Procesamiento de Pago -->
+    <div class="modal fade" id="modalProcesoPago" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Procesando Pago</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>Por favor espere mientras procesamos su pago...</p>
+                    <!-- Agrega aquí cualquier información adicional sobre el proceso de pago -->
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                </div>
             </div>
         </div>
     </div>
