--- a/weedWeb/src/app/components/searchbar/searchbar.component.css
+++ b/weedWeb/src/app/components/searchbar/searchbar.component.css
@@ -45,4 +45,21 @@ nav {
     font-size: 1.25rem;
     color: rgb(119,150,36);
   }
+  .favorite-modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .favorite-modal > button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+  }
   
